太岁佐阴阳，结历记风霜，天垂万象唯见千秋百代未央。