@@ -45,13 +45,8 @@ import java.io.IOException;
 import java.nio.file.Paths;
 import java.util.*;
 
-import static java.util.stream.Collectors.toList;
 import static javafx.collections.FXCollections.observableArrayList;
-import static org.jackhuang.hmcl.setting.SettingsManager.settings;
-import static org.jackhuang.hmcl.setting.SettingsManager.getAccountMetadataRecords;
-import static org.jackhuang.hmcl.setting.SettingsManager.getAuthlibInjectorServers;
-import static org.jackhuang.hmcl.setting.SettingsManager.getUserAccountMetadataRecords;
-import static org.jackhuang.hmcl.setting.SettingsManager.userSettings;
+import static org.jackhuang.hmcl.setting.SettingsManager.*;
 import static org.jackhuang.hmcl.ui.FXUtils.onInvalidating;
 import static org.jackhuang.hmcl.util.Lang.immutableListOf;
 import static org.jackhuang.hmcl.util.Lang.mapOf;
@@ -492,7 +487,7 @@ public final class Accounts {
                 .map(AuthlibInjectorAccount.class::cast)
                 .filter(it -> !getAuthlibInjectorServers().contains(it.getServer()))
                 .filter(Accounts::canRemoveAccount)
-                .collect(toList())
+                .toList()
                 .forEach(accounts::remove);
     }
     // ====
